# AstroBox-NG-Module-PluginSystem

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  manager.rs  manifest.rs  plugin.rs  provider_action_bridge.rs  transport_runtime.rs
src/api/: host.rs
src/api/host/: clipboard.rs  device.rs  dialog.rs  event.rs  i18n.rs  interconnect.rs  mod.rs  os.rs  permission.rs  picker.rs  provider_callback.rs  queue.rs  register.rs  thirdpartyapp.rs  timer.rs  transport.rs  ui.rs
src/api/host/v3/: mod.rs  ui.rs  watchface.rs
