[package]
name = "pluginsystem"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
log = "0.4"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
    "time",
] }
zip = "6.0"
pollster = "0.4"
corelib = { path = "../core" }
os_info = "3.7"
sys-locale = "0.3"
whoami = "1.5"
rand = { version = "0.9", features = ["std"] }
chrono = "0.4"

# Wasmtime
wasmtime = { version = "38.0.3", features = [
    "async",
    "component-model",
    "component-model-async",
    "pulley",
] }
wasmtime-wasi = "38.0.3"
sha2 = "0.10"
hex = "0.4"

# Wasmtime WASI APIs
wasmtime-wasi-http = "38.0.3"
tauri = { version = "2.9.2", features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2.5.2"
frontbridge = { path = "../frontbridge" }
