[package]
name = "pluginsystem"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossbeam-channel = "0.5"
log = "0.4"
once_cell = "1.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "fs",
    "time",
] }
futures-util = "0.3"
zip = "8.6"
pollster = "0.4"
corelib = { path = "../core" }
os_info = "3.14"
sys-locale = "0.3"
whoami = "2.1"
rand = { version = "0.10", features = ["std"] }
chrono = "0.4"
base64 = "0.22"
pb = { path = "../pb" }
prost = "0.14.3"

# Wasmtime
wasmtime = { version = "44.0.1", features = [
    "async",
    "component-model",
    "component-model-async",
    "pulley",
] }
wasmtime-wasi = "44.0.1"
sha2 = "0.11"
hex = "0.4"

# Wasmtime WASI APIs
wasmtime-wasi-http = "44.0.1"
tauri = { version = "2.11.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2.5.4"
frontbridge = { path = "../frontbridge" }
